--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   },
   "homepage": "https://github.com/phillyDesignr/webpack2-starter#readme",
   "devDependencies": {
+    "css-loader": "^0.28.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
     "webpack": "^2.6.0"
   }
 }
