--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "node_modules/webpack/bin/webpack.js -p --progress --colors"
+    "prod": "npm run clean && node_modules/webpack/bin/webpack.js -p --progress --colors",
+    "clean": "rimraf ./dist/*"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.0",
